<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="Robot_Set_Real" Id="{92712cdc-efae-4d23-8649-3843d369d40f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Robot_Set_Real : BOOL
VAR_INPUT
	Num : UINT;
	Value : REAL;
END_VAR
VAR_IN_OUT
	Robot : UR3e_Robot;
END_VAR
VAR
	Row : UINT;
	REALArray : REAL_ByteArray;
	i : UINT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Num > 23 THEN
	Robot_Set_Int := FALSE;
	RETURN;
END_IF

IF Num < 12 THEN
	REALArray.Value := Value;
	Row := (Num * 4)+52; // bereken start byte in buffer
	FOR i:=0 TO 3 BY 1 DO // copy data
		Robot.GPR1[Row+i] := REALArray.AValue[3-i];
	END_FOR
	Robot_Set_Int := TRUE;
	RETURN;
ELSIF Num > 11 THEN
	REALArray.Value := Value;
	Row := ((Num - 12) * 4) + 52; // bereken start byte in buffer
	FOR i:=0 TO 3 BY 1 DO // copy data
		Robot.GPR2[Row+i] := REALArray.AValue[3-i];
	END_FOR
	Robot_Set_Int := TRUE;
	RETURN;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Robot_Set_Real">
      <LineId Id="24" Count="20" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>